# pam_exec_osx

./: .autotools  .cproject  .gitignore  .project  .travis.yml  COPYING  Makefile.am  README  configure.ac  install  test.sh
src/: pam_exec_osx.c  pam_exec_osx.h
tests/: test_exec_exports.c
